--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ ul, li {
   right: -100%;
   height: 100%;
   width: 100%;
-  background: url('../img/button.svg') no-repeat center top / cover;
+  background: url('../img/button2.svg') no-repeat center top / cover;
   backdrop-filter: blur(10px);
   /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
   /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
